src/test/ui/consts/miri_unleashed/inline_asm.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/inline_asm.rs:10:14
   |
LL |     unsafe { llvm_asm!("xor %eax, %eax" ::: "eax"); }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ inline assembly is not supported
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
